# EPIC

./: .dockerignore  .envrc  .gitignore  .nfs807c304d01c068d000000724  .nfs807c304d01c0690a00000002  =  Dockerfile  MUJOCO_LOG.TXT  README.md  activate_pixi.sh  build_dockerfile.sh  environment.yml  epic.py  epic_mc.py  epic_mc_2.py  experiments.md  loss_plots.py  maml.py  meta.py  output (copy).txt  output.txt  output1.txt  plot_mc.py  plot_new.py  plot_old.py  plot_test.py  pyproject.toml  requirements.txt  run.sh  run_agent.sh  run_grid.py  run_libero.sh  run_maml.sh  run_maml_2.sh  run_maml_3.sh  run_maml_4.sh  run_maml_zhi.sh  run_mc.sh  run_mc_AFB.sh  run_mc_Cheetah.sh  (+8 more)
.devcontainer/: Dockerfile  devcontainer.json
PEARL_BASELINE/: launch_experiment.py  mujoco_test.py
algos/: epic_util.py  gaussian_sac.py  gaussian_sac2.py  logging.py  memory.py  types.py
envs/: __init__.py  ant_rand_dir.py  ant_rand_goal.py  ant_rand_vel.py  half_cheetah_rand_dir.py  jellybean.py  lunar_epic_2.py  new_ant.py  new_cartpole.py  new_half_cheetah.py  new_halfcheetah.py  new_humanoid.py  new_lunar_lander.py  new_swimmer.py  swimmer_epic_2.py  swimmer_rand_vel.py
epic_libero/: algorithm.py  policy.py
libero_config/: user_config.yaml
results/: 4)EPIC_CartPole-v0_vpg_s2000_n10_every50_size32_c0.5_tau0.5_goal0.5_steps50_mass1.0_run0.txt  CartPole-v0_vpg_s2000_n10_every50_goal0.5_size32_c0.5_tau0.5_mass1.0_run0.txt  CartPole-v0_vpg_s2000_n10_every50_goal0.5_size32_c0.5_tau0.5_mass1.0_run1.txt  CartPole-v0_vpg_s2000_n10_every50_goal0.5_size32_c0.5_tau0.5_mass1.0_run2.txt  CartPole-v0_vpg_s2000_n10_every50_goal0.5_size32_c0.5_tau0.5_mass1.0_run3.txt  CartPole-v0_vpg_s2000_n10_every50_goal0.5_size32_c0.5_tau0.5_mass1.0_run4.txt  CartPole-v0_vpg_s2000_n10_every50_goal0.5_size32_c0.5_tau0.5_mass1.0_run5.txt  CartPole-v0_vpg_s2000_n10_every50_goal0.5_size32_c0.5_tau0.5_mass1.0_run6.txt  CartPole-v0_vpg_s2000_n10_every50_goal0.5_size32_c0.5_tau0.5_mass1.0_run7.txt  CartPole-v0_vpg_s2000_n10_every50_goal0.5_size32_c0.5_tau0.5_mass1.0_run8.txt  CartPole-v0_vpg_s2000_n10_every50_goal0.5_size32_c0.5_tau0.5_mass1.0_run9.txt  CartPole-v0_vpg_s2000_n10_every50_size32_c0.5_tau0.5_goal0.5_steps50_mass1.0_run0.txt  EPIC_CartPole-v0_vpg_s2000_n10_every100_size32_c0.5_tau0.5_goal0.5_steps100_mass1.0fixedprior_run0.txt  EPIC_CartPole-v0_vpg_s2000_n10_every100_size32_c0.5_tau0.5_goal0.5_steps50_mass1.0_run0.txt  EPIC_CartPole-v0_vpg_s2000_n10_every10_size32_c0.5_tau0.5_goal0.5_steps100_mass1.0_run0.txt  EPIC_CartPole-v0_vpg_s2000_n10_every10_size32_c0.5_tau0.5_goal0.5_steps100_mass1.0fixedprior_run0.txt  EPIC_CartPole-v0_vpg_s2000_n10_every10_size32_c0.5_tau0.5_goal0.5_steps300_mass1.0_run0.txt  EPIC_CartPole-v0_vpg_s2000_n10_every10_size32_c0.5_tau0.5_goal0.5_steps500_mass1.0_run0.txt  EPIC_CartPole-v0_vpg_s2000_n10_every10_size32_c0.5_tau0.5_goal0.5_steps50_mass1.0_run0.txt  EPIC_CartPole-v0_vpg_s2000_n10_every11_size32_c0.5_tau0.5_goal0.5_steps100_mass1.0_run0.txt  EPIC_CartPole-v0_vpg_s2000_n10_every1_size32_c0.5_tau0.5_goal0.5_steps100_mass1.0_run0.txt  EPIC_CartPole-v0_vpg_s2000_n10_every1_size32_c0.5_tau0.5_goal0.5_steps300_mass1.0_run0.txt  EPIC_CartPole-v0_vpg_s2000_n10_every1_size32_c0.5_tau0.5_goal0.5_steps500_mass1.0_run0.txt  EPIC_CartPole-v0_vpg_s2000_n10_every1_size32_c0.5_tau0.5_goal0.5_steps50_mass1.0_run0.txt  EPIC_CartPole-v0_vpg_s2000_n10_every200_size32_c0.5_tau0.5_goal0.5_steps100_mass1.0fixedprior_run0.txt  EPIC_CartPole-v0_vpg_s2000_n10_every200_size32_c0.5_tau0.5_goal0.5_steps50_mass1.0_run0.txt  EPIC_CartPole-v0_vpg_s2000_n10_every25_size32_c0.5_tau0.5_goal0.5_steps100_mass1.0_run0.txt  EPIC_CartPole-v0_vpg_s2000_n10_every25_size32_c0.5_tau0.5_goal0.5_steps100_mass1.0fixedprior_run0.txt  EPIC_CartPole-v0_vpg_s2000_n10_every25_size32_c0.5_tau0.5_goal0.5_steps300_mass1.0_run0.txt  EPIC_CartPole-v0_vpg_s2000_n10_every25_size32_c0.5_tau0.5_goal0.5_steps500_mass1.0_run0.txt  EPIC_CartPole-v0_vpg_s2000_n10_every25_size32_c0.5_tau0.5_goal0.5_steps50_mass1.0_run0.txt  EPIC_CartPole-v0_vpg_s2000_n10_every26_size32_c0.5_tau0.5_goal0.5_steps100_mass1.0_run0.txt  EPIC_CartPole-v0_vpg_s2000_n10_every400_size32_c0.5_tau0.5_goal0.5_steps50_mass1.0_run0.txt  EPIC_CartPole-v0_vpg_s2000_n10_every50_goal0.5_size32_c0.5_tau0.5_mass1.0_run0.txt  EPIC_CartPole-v0_vpg_s2000_n10_every50_size32_c0.5_tau0.5_goal0.5_steps100_mass1.0fixedprior_run0.txt  EPIC_CartPole-v0_vpg_s2000_n10_every50_size32_c0.5_tau0.5_goal0.5_steps100_mass5_run0.txt  EPIC_CartPole-v0_vpg_s2000_n10_every50_size32_c0.5_tau0.5_goal0.5_steps50_mass1.0_run0.txt  EPIC_CartPole-v0_vpg_s2000_n10_every5_size32_c0.5_tau0.5_goal0.5_steps100_mass1.0_run0.txt  EPIC_CartPole-v0_vpg_s2000_n10_every5_size32_c0.5_tau0.5_goal0.5_steps300_mass1.0_run0.txt  EPIC_CartPole-v0_vpg_s2000_n10_every5_size32_c0.5_tau0.5_goal0.5_steps500_mass1.0_run0.txt  (+46 more)
results_maml/: maml_CartPole-v0_ppo_s200_n10_every20_size32_mass1.0.txt  maml_CartPole-v0_ppo_s200_n10_every50_size32_mass1.0.txt  maml_CartPole-v0_vpg_s2000_n10_every10_size32_goal0.5_steps100_mass1.0fixedprior_run0.txt  maml_CartPole-v0_vpg_s2000_n10_every10_size32_goal0.5_steps50_mass1.0_run0.txt  maml_CartPole-v0_vpg_s2000_n10_every11_size32_goal0.5_steps100_mass1.0_run0.txt  maml_CartPole-v0_vpg_s2000_n10_every1_size32_goal0.5_steps300_mass1.0_run0.txt  maml_CartPole-v0_vpg_s2000_n10_every200_size32_goal0.5_steps100_mass1.0fixedprior_run0.txt  maml_CartPole-v0_vpg_s2000_n10_every200_size32_goal0.5_steps50_mass1.0_run0.txt  maml_CartPole-v0_vpg_s2000_n10_every400_size32_goal0.5_steps50_mass1.0_run0.txt  maml_CartPole-v0_vpg_s2000_n10_every50_size32_goal0.5_steps100_mass1.0fixedprior_run0.txt  maml_CartPole-v0_vpg_s2000_n10_every50_size32_goal0.5_steps100_mass5_run0.txt  maml_CartPole-v0_vpg_s2000_n10_every50_size32_goal0.5_steps50_mass1.0_run0.txt  maml_CartPole-v0_vpg_s2000_n10_every50_size32_mass1.0_run1.txt  maml_CartPole-v0_vpg_s2000_n10_every50_size32_mass1.0_run2.txt  maml_CartPole-v0_vpg_s2000_n10_every50_size32_mass1.0_run6.txt  maml_CartPole-v0_vpg_s2000_n10_every50_size32_mass1.0_run8.txt  (+57 more)
(+1120 files in other folders)
