[project]
authors = []
description = "epic PAC bound for lifetime learning"
name = "epic"
requires-python = "~= 3.10.0"
version = "0.1.0"
dependencies = ["torchvision>=0.19.1,<0.20", "torchrl>=0.5.0,<0.6", "gtimer>=1.0.0b5,<2", "polars"]

[build-system]
# build-backend = "setuptools"
# requires = ["setuptools==65.5.0"]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge", "pytorch", "nvidia"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.system-requirements]
linux = "3.10.0"
libc = { family = "glibc", version = "2.17" }

[tool.pixi.pypi-dependencies]
epic = { path = ".", editable = true }
# "setuptools==65.5.0", "pip==21"
# setuptools = "=65.5.0"
gym = "==0.22.0"
mlflow = ">=2.15.1,<3"
wandb = "==0.17.5"
mujoco-py = ">=2.1.2.14,<3"
cython = ">=0.29.6,<0.30.0"
# scalene = "==1.5.45"
scalene = { git = "ssh://git@github.com/plasma-umass/scalene.git", rev = "856ba1a" }
rlkit = { git = "ssh://git@github.com/rail-berkeley/rlkit.git", rev = "ac45a9d" }
jbw = { git = "ssh://git@github.com/ckchow/jelly-bean-world.git", subdirectory="api/python", rev="2a48299" }

[tool.pixi.tasks]
# install_jbw = "pip install 'jbw @ git+https://github.com/eaplatanios/jelly-bean-world.git/#subdirectory=api/python'"

[tool.pixi.target.linux-64.dependencies]
# cudatoolkit = "*"
# torchvision = "*"
pytorch-cuda = { version = "*", channel = "pytorch" }
pytorch = { version = "2.4.1.*", channel = "pytorch" }

[tool.pixi.target.osx-arm64.dependencies]
# pytorch = {}
pytorch = { version = "2.4.1.*", channel = "pytorch" }
# torchvision = { version = "*", channel = "pytorch" }

[tool.pixi.dependencies]
python = "3.10.*"
# cpython = { version = "3.10.*", channel = "conda-forge/label/python_debug" }
box2d-py = ">=2.3.8,<3"
higher = ">=0.2.1,<0.3"
numpy = ">=2.1.0,<3"
openblas = ">=0.3.24,<0.4"
pygame = ">=2.6.0,<3"
graphviz = ">=12.0.0,<13"
python-graphviz = ">=0.20.3,<0.21"
pip = ">=24.2,<25"
setuptools = ">=67"
patchelf = ">=0.17.2,<0.19"
pynvml = ">=11.5.3,<12"
