[project]
authors = []
description = "epic PAC bound for lifetime learning"
name = "epic"
requires-python = "~= 3.10.0"
version = "0.1.0"
dependencies = [
    "torchrl>=0.5.0,<0.6",
    "polars",
    "wandb>=0.18.3,<0.19",
    # robosuite 1.5 API incompatibility
    "robosuite==1.4.1",
    "pyglove>=0.4.4,<0.5",
    "hydra-core>=1.3.2,<2",
    "easydict>=1.13,<2",
    "thop>=0.1.1.post2209072238,<0.2",
    "bayesian-torch>=0.5.0,<0.6",
    "bddl>=3.5.0,<4", "gym>=0.26.2,<0.27",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["nvidia/label/cuda-11.8.0", "nvidia", "conda-forge",  "pytorch"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.system-requirements]
linux = "3.10.0"
libc = { family = "glibc", version = "2.17" }

[tool.pixi.pypi-dependencies]
epic = { path = ".", editable = true }
# "setuptools==65.5.0", "pip==21"
# setuptools = "=65.5.0"
# gym = "==0.22.0"
# mujoco-py = ">=2.1.2.14,<3"
# cython = ">=0.29.6,<0.30.0"
# rlkit = { git = "ssh://git@github.com/rail-berkeley/rlkit.git", rev = "ac45a9d" }
# jbw = { git = "ssh://git@github.com/ckchow/jelly-bean-world.git", subdirectory = "api/python", rev = "2a48299" }
libero = { git = "ssh://git@github.com/ckchow/LIBERO", rev = "63b14dd" }
robomimic = { git = "ssh://git@github.com/ARISE-Initiative/robomimic", rev = "9273f9c" }

[tool.pixi.target.linux-64.dependencies]
# the hoffman cluster will use RTX2080Ti's, which support cuda 11.8
cuda = { version = "*", channel = "nvidia/label/cuda-11.8.0" }
# 0.20.1 somehow removes "torchvision.transforms"
torchvision = { version = "0.20.0", channel = "pytorch" }
pytorch-cuda = { version = "11.8.*", channel = "pytorch" }
pytorch = { version = "2.5.*", channel = "pytorch" }

[tool.pixi.target.osx-arm64.dependencies]
# pytorch = {}
pytorch = { version = "2.5.*", channel = "pytorch" }
# torchvision = { version = "*", channel = "pytorch" }

[tool.pixi.dependencies]
python = "3.10.*"
# cpython = { version = "3.10.*", channel = "conda-forge/label/python_debug" }
# box2d-py = ">=2.3.8,<3"
# higher = ">=0.2.1,<0.3"
# openblas = ">=0.3.24,<0.4"
# pygame = ">=2.6.0,<3"
graphviz = ">=12.0.0,<13"
python-graphviz = ">=0.20.3,<0.21"
pip = ">=24.2,<25"
setuptools = ">=67"
# patchelf = ">=0.17.2,<0.19"
pynvml = ">=11.5.3,<12"
# numba = "==0.59.0"
imageio = ">=2.36.0,<3"
imageio-ffmpeg = ">=0.5.1,<0.6"
einops = ">=0.8.0,<0.9"
transformers = ">=4.42.1,<4.43"
